remove ds_store and add cname

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="subheading mb-5">Melbourne, Victoria.
           <a href="mailto:name@email.com">nhung@nhunghoang.com</a>
         </div>
-        <div class="col-10 mb-5">
+        <div class="col-sm-12 col-md-10 mb-5">
           <p>I am a junior developer who loves working with HTML, CSS, Ruby, Ruby on Rails, Bootstrap, Git.</p>
           <p>To build my experience I have developed and maintain several websites for small businesses such as Card Creations and Cake Decorations by Vinnie.</p>
           <p>I am highly self-motivated, adaptable to learning, and love understanding new technologies.</p>
