modified index and readme

--- a/index.html
+++ b/index.html
@@ -77,9 +77,6 @@
           <p>I enjoy regularly attending and volunteering at web developer meetups and social events.</p>
         </div>
         <div class="social-icons mt-2">
-          <a href="#">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
           <a href="https://github.com/nhunghoang1">
             <i class="fab fa-github"></i>
           </a>
@@ -101,9 +98,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developed and ongoing maintainance of cardcreation.com.au</h3>
+            <h3 class="mb-0">Developed and ongoing maintainance of cardcreations.com.au</h3>
             <div class="subheading mb-3"><a href="cardcreation.com.au">cardcreation.com.au</a></div>
-            <p>I've developed <a href="#">Card Creation</a> web app for a small business where you can see the beautiful colection and development of the card designs by Vinnie - my mother in law.</p>
+            <p>I've developed <a href="">Card Creations</a> web app for a small business where you can see the beautiful colections and development of the card designs by Vinnie - my mother in law.</p>
 
             <h3 class="mb-0">Developed and ongoing maintainance of cakedecoration.com.au</h3>
             <div class="subheading mb-3"><a href="cakedecoration.com.au">cakedecoration.com.au</a></div>
@@ -219,31 +216,16 @@
             <i class="fab fa-js-square"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
-          </li>
-          <li class="list-inline-item">
             <i class="fab fa-react"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-sass"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-less"></i>
+            <i class="fab fa-python"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
+            <i class="far fa-gem"></i>
           </li>
         </ul>
     </section>
@@ -253,8 +235,9 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <p>Apart from being a web developer, I enjoy most of my time at my Taekwondo club. It's one of the most popular martial art which is beeing taught in almost every country in the world.</p>
+        <p class="mb-0">Taekwondo helps me find the balance between my family life and work, teaches me about courtersy, intergrity, self-control and most importanly perseverance - to keep on doing something despite difficulties and never give up.</p>
+        <p class="mb-0">I also love decorating cakes and making cards - this is one of the reason why I started building the websites for my mom-in-law's cakes and cards.</p>
       </div>
     </section>
 
@@ -266,30 +249,31 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
+            CHIF Taekwondo World Champion 2019 in Melbourne, Australia</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
+            Victoria Taekwondo Champion 2017</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+            Goulburn Taekwondo Champion 2016</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
+            The most enthusiastic member of RMIT Taekwondo club 2015</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
+            English certificate 3 with honors at the VUS institute of English 2012</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
+            Hairdressing certificate in 2013</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
+            Master Barista certificate in 2014</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Food safety and hygiene certificate 2015</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Fist Aid training Melbourne 2015</li>
         </ul>
       </div>
     </section>
