fix typo in cakes website url

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Creator + Maintainer of cardcreations.com.au</h3>
-            <div class="subheading mb-3"><a href="http://cardcreation.com.au">cardcreation.com.au</a></div>
+            <div class="subheading mb-3"><a href="http://cardcreations.com.au">cardcreation.com.au</a></div>
             <p>Card Creations creates hand crafted greeting cards and place cards. They sell mainly at markets and through word of mouth. This website will used primarily for promotion, as well as a gateway to their Etsy store.</p>
 
             <h3 class="mb-0">Creator + Maintainer of cakesbyvinnie.com.au</h3>
